fixing address bar problem on mobile v3

--- a/style.css
+++ b/style.css
@@ -15,6 +15,19 @@ body {
 	align-items: center;
 	flex-direction: column;
 	max-width: 100vw;
+	
+
+}
+.container_start {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	height: 100vh ;
+	width: 100%;
+}
+
+.container {
 	background-color: #212931;
 	background-image: url("../images/overlay.png"), 
 		linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)),
@@ -23,13 +36,7 @@ body {
 	background-position: 60% center;
 	background-attachment: fixed;
 	background-repeat: no-repeat;
-
-}
-
-.container {
-	
 	text-align: center;
-	height: calc(100vh + 6rem);
 	width: 100%;
 	display: flex;
 	justify-content: center;
@@ -136,10 +143,13 @@ h2 {
 		/*background-size: 10px 30px;
 		*/
 	}
-	.container {
+	.container_start {
 		height: 100vh;
 	}
-	.pepe {
+	/*.container {
+		height: 100vh;
+	}
+*/	.pepe {
 		width: 100%;
 		box-shadow: none;
 		top: 0;
